--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,63 +78,68 @@ dependencies {
      *
      * android development support dependencies
      */
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:customtabs:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    
 
     /**
      *
      * android FCM dependencies
      */
-    compile 'com.google.firebase:firebase-messaging:10.2.1'
-
+    
     /**
      *
      *  android Map and Location dependencies
      */
-    compile 'com.google.android.gms:play-services-maps:10.2.1'
-    compile 'com.google.android.gms:play-services-location:10.2.1'
-
+    
     /**
      *
      * Retrofit dependencies
      */
-    compile 'com.squareup.retrofit2:retrofit:2.2.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-
+    
     /**
      *
      * To set the fonts dependencies
      */
-    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     /**
      * Paper DB dependencies
      */
-    compile 'io.paperdb:paperdb:2.0'
-
+    
     /**
      * Facebook dependencies
      */
-    compile 'com.facebook.android:facebook-android-sdk:4.21.1'
     /**
      * Image chooser dependencies
      */
-    compile 'com.kbeanie:multipicker:1.1.31@aar'
     /**
      * Image Crop dependencies
      */
-    compile 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
-
+    
     /**
      * leakcanary dependencies
      */
+    
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:customtabs:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.firebase:firebase-messaging:10.2.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
+    compile 'com.google.android.gms:play-services-location:10.2.1'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    compile 'io.paperdb:paperdb:2.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.21.1'
+    compile 'com.kbeanie:multipicker:1.1.31@aar'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testCompile 'junit:junit:4.12'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-
-    testCompile 'junit:junit:4.12'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:19.1.0'
+    compile 'com.android.support:design:25.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
