--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ android {
     }
     productFlavors {
         DEV {
-            buildConfigField 'String', 'BASE_URL', '" YOUR DEV URL"'
+            buildConfigField 'String', 'BASE_URL', '"http://52.38.181.185:3000/"'
             buildConfigField 'boolean', 'WATER_MARK', 'true'
         }
         QA {
@@ -78,23 +78,22 @@ dependencies {
      *
      * android development support dependencies
      */
-    
 
     /**
      *
      * android FCM dependencies
      */
-    
+
     /**
      *
      *  android Map and Location dependencies
      */
-    
+
     /**
      *
      * Retrofit dependencies
      */
-    
+
     /**
      *
      * To set the fonts dependencies
@@ -102,7 +101,7 @@ dependencies {
     /**
      * Paper DB dependencies
      */
-    
+
     /**
      * Facebook dependencies
      */
@@ -112,11 +111,11 @@ dependencies {
     /**
      * Image Crop dependencies
      */
-    
+
     /**
      * leakcanary dependencies
      */
-    
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:customtabs:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
